Parte superior do projeto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<div id="container">
 			<div id="topo">
-				<h1 class="logo">Notícias cidade</h1>
+				<h1 class="logo">Notícias Cidade</h1>
 			</div>
 		</div>
 
