Coloquei os layouts laterais, primarios e secundarios

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	</head>
 
 	<body class="home">
-
+		<!-- início container -->
 		<div id="container">
-			<div id="topo">
+			<div id="topo"> <!-- início topo -->
 				<h1 class="logo">Notícias Cidade</h1>
 				<ul id="navegacao">
 					<li class="primeiro"><a id="home" href="index.html">Home</a></li>
@@ -22,9 +22,24 @@
 					<li><a id="ciencia" href="ciencia.html">Ciência</a></li>
 					<li><a id="fotos" href="fotos.html">Fotos</a></li>
 				</ul>
+			</div> <!-- fim topo -->
+
+			<div id="conteudo"> <!-- início conteudo -->
+					
+				<div id="primario">Primário</div>
+				<div id="secundario">Secundário</div>
+				<div id="lateral">Lateral</div>
+
+			</div> <!-- fim conteudo -->
+
+		</div> <!-- fim container -->
+
+		<div id="container-rodape" style="clear: both;">
+			<div id="rodape">
+				 &copy; Copyright 2000-2022 Notícias cidade
 			</div>
 		</div>
-
+ 
 	</body>
 
 </html>
