--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
 					
 				<div id="primario">Primário</div>
 				<div id="secundario">Secundário</div>
-				<div id="lateral">Lateral</div>
+
+				<div id="lateral"> <!-- início lateral -->
+					<div class="caixa">
+						<h2>Entrevistas</h2>
+						<div class="caixa-conteudo">
+							Conteúdo
+						</div>
+					</div>
+				</div>  <!-- fim lateral -->
 
 			</div> <!-- fim conteudo -->
 
