--- a/index.html
+++ b/index.html
@@ -33,7 +33,31 @@
 					<div class="caixa">
 						<h2>Entrevistas</h2>
 						<div class="caixa-conteudo">
-							Conteúdo
+							<ul>
+								<li><a href="">José Almeida</a></li>
+								<li><a href="">Felipe Silva</a></li>
+								<li><a href="">Victor Henrique</a></li>
+								<li><a href="">João César</a></li>
+								<li><a href="">Pedro Rodrigues</a></li>
+								<li><a href="">Arthur Cordeiro</a></li>
+								<li><a href="">Fernando Weiss</a></li>
+								<li><a href="">Marcus Vinicius</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="caixa">
+						<h2>News</h2>
+						<div class="caixa-conteudo">
+							<form>
+								<div>
+									<label for="email">Email:</label>
+									<input type="text" name="email" id="email" placeholder="email">
+								</div>
+								<div>
+									<input class="submit" type="submit" value="Cadastrar">
+								</div>
+							</form>
 						</div>
 					</div>
 				</div>  <!-- fim lateral -->
